--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,8 @@
+*{
+  transition: all .3s cubic-bezier(.16,.8,.62,1.52);
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   background-color: rgb(121, 163, 255);
@@ -14,8 +19,16 @@ code {
 }
 
 p {
-  font-family: "Trispace", sans-serif;
+  font-family: "Roboto", sans-serif;
   word-wrap: break-word;
+}
+
+h1{
+  text-align: center;
+  font-size: 40px;
+  color: white;
+  text-shadow: 1px 1px 1px #000, 
+               3px 3px 5px rgb(70, 70, 70); 
 }
 
 header{
@@ -25,7 +38,15 @@ header{
 }
 
 .letter-counter {
-  font-size: 12px;
+  font-size: 13px;
+  font-style: italic;
+  color: rgb(91, 91, 91);
+}
+
+.letter-counter span{
+  color: red;
+  font-style:italic;
+  font-weight: 800;
 }
 
 .date {
@@ -51,51 +72,29 @@ header{
                0px 8px 13px rgba(0,0,0,0.1),
                0px 18px 23px rgba(0,0,0,0.1);
   background: white;
+  border-radius: 15px;
 }
 
 .submit-wrapper {
+  text-align: center;
+  border-radius: 15px;
   display: flex;
-  background: rgb(228, 228, 228);
+  background: rgb(194, 194, 194);
 }
 
 textarea {
+  border-radius: 5px;
   width: 310px;
   margin-bottom: 10px;
 }
 
-.like-btn {
-  border: none;
-  background: pink;
-  border-radius: 50%;
-  padding: 2%;
-  width: 40px;
-  margin: 10px 6px 0px 0px;
-}
-
 .like-heart {
-
-}
-
-.like-btn:hover {
-  color: rgb(223, 200, 200);
-  cursor: pointer;
+  
 }
 
 .likes-counter {
   color: rgb(165, 165, 165);
   font-size: 12px;
-}
-
-.submit-btn {
-  border: none;
-  background: #f737378e;
-  border-radius: 30px;
-  padding: 13px 30px;
-  margin-bottom: 10px;
-  cursor: pointer;
-  box-shadow: 0px 4px 3px rgba(0,0,0,0.1),
-               0px 8px 13px rgba(0,0,0,0.1),
-               0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .thought-message {
@@ -114,42 +113,16 @@ textarea {
   align-items: center;
 }
 
-.load-spinner {
-  width: 80px;
-  height: 80px;
-  border: 10px solid #f73737;
-  border-radius: 50%;
-  border-left: 10px solid #fff;
-  animation: spinner infinite 1s;
-}
-
-@keyframes spinner {
-  0% {
-    transform: rotate(0);
-  }
-  25% {
-    transform: rotate(90);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  75% {
-    transform: rotate(270deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+/* ---- BUTTONS ----- */
 
 .refresh-btn {
-  background-color: #f737378e;
-  font-family: "Trispace", sans-serif;
+  background-color: #ffa3a38e;
+  font-style: italic;
   border: none;
   border-radius: 30px;
   display: inline-block;
   cursor: pointer;
-  /* border-radius: 10px; */
-  color: rgb(255, 255, 255);
+  color: black;
   padding: 13px 30px;
   margin: 10px;
   margin-bottom: 30px;
@@ -158,7 +131,44 @@ textarea {
                0px 18px 23px rgba(0,0,0,0.1);
 }
 
-/* ---- MEDIA QUERY FOR DESKTOP AND TABLET ----- */
+.refresh-btn:hover{
+  border: 2px solid #f9004d;
+}
+
+.submit-btn {
+  border: none;
+  background: #f737378e;
+  align-items: center;
+  font-weight: 800;
+  border-radius: 30px;
+  padding: 13px 30px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.1),
+               0px 8px 13px rgba(0,0,0,0.1),
+               0px 18px 23px rgba(0,0,0,0.1);
+}
+
+.submit-btn:hover{
+  border: 2px solid #f9004d;
+}
+
+.like-btn {
+  border: none;
+  background: pink;
+  border-radius: 50%;
+  padding: 2%;
+  width: 40px;
+  margin: 10px 6px 0px 0px;
+}
+
+.like-btn:hover {
+  color: rgb(223, 200, 200);
+  cursor: pointer;
+  border: 2px solid #f9004d;
+}
+
+/* ---- MEDIA QUERY ----- */
 
 @media (min-width: 768px) {
   .thoughts-wrapper,
