--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+
 body {
+  font-family: 'Inconsolata', monospace;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -29,7 +29,8 @@ code {
 }
 
 .createForm textarea {
-  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
   margin-top: 12px
 }
 
@@ -46,7 +47,8 @@ code {
   padding: 10px 15px;
   border-radius: 30px;
   border: 0px;
-  font-size:12px;
+  font-size: 14px;
+  font-weight: bold;
   display: flex;
   align-items: center;
 }
@@ -61,7 +63,7 @@ code {
 }
 
 .heartButton {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .numberOfHearts {
@@ -73,13 +75,13 @@ code {
   justify-content: space-between;
   display: flex;
   align-items: center;
-  margin-top: 35px;
+  margin-top: 25px;
 }
 
 .thoughtRelativeDate {
   color: grey;
   opacity: 70%;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .heart {
@@ -94,7 +96,7 @@ code {
 .heartButton button {
   border: 0px;
   border-radius: 100%;
-  padding: 10px;
+  padding: 6px;
   background-color: #efefef;
 }
 
