--- a/code/src/index.css
+++ b/code/src/index.css
@@ -130,27 +130,24 @@ textarea {
 }
 
 .liked,
-.no-likes {
+.like-btn {
   width: 50px;
   height: 50px;
   -webkit-transition: all 0.1s;
   transition: all 0.1s;
 }
 
-.no-likes {
+.like-btn {
   background: var(--clr-lightgrey);
 }
 
-.no-likes:hover,
-.no-likes:active {
+.liked,
+.like-btn:hover,
+.like-btn:active {
   -webkit-transform: translate(0px, 5px);
   -ms-transform: translate(0px, 5px);
   transform: translate(0px, 5px);
   border-bottom: 3px solid var(--clr-grey);
-  background-color: var(--clr-accent);
-}
-
-.liked {
   background-color: var(--clr-accent);
 }
 
