--- a/code/src/index.css
+++ b/code/src/index.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@400;500;700&display=swap');
 
 * {
-    margin-top: 2vw;
     padding: 0;
     box-sizing: border-box;
    -webkit-box-sizing: border-box;
@@ -12,28 +11,25 @@
    font-family: 'Red Hat Mono';
    font-weight: 500;
 }
-
 body {
+  margin-top: 3vw;
   background: linear-gradient(to left, #FFDCDC 0%, #FF9292 100%);
 }
-
 h2 {
   font-size: 13px;
-  padding-bottom: 2vw;
 }
-
 p {
   font-size: 10px;
   color: grey;
 }
 
+/* ------------------ SECTION GENERALS ------------------ */
 section {
   display: flex;
   align-items: center;
   flex-direction: column;
   margin: 0 auto
 }
-
 .card {
   display: flex;
   flex-direction: column;
@@ -48,25 +44,29 @@ section {
   background-color: white;
 }
 
+/* ------------------ FORM ------------------ */
 .grey {
   background-color: #EFEFEF;
 }
-
 .form-button {
-  font-size: 12px;
+  font-size: 10px;
   border-radius: 40px;
   border: none;
   background-color: pink;
   width: fit-content;
   padding: 2vw;
 }
-
-
 textarea {
-  height: 70px;
+  height: 15vh;
   margin-bottom: 2vw;
+  font-size: 10px;
+}
+.submit-message {
+  padding: 0 1vw;
+  font-size: 10px;
 }
 
+/* ------------------ THOUGHT LIST ------------------ */
 .bottom-card-container {
   width: 100%;
   display: flex;
@@ -76,31 +76,69 @@ textarea {
   padding-top: 2vw;
   margin-top: auto;
 }
-
 .heart-container {
   display: flex;
   align-items: center;
   gap: 0.5vw;
 }
-
 .likes-button {
   display: flex;
   background-color: #EFEFEF;
   border-radius: 50%;
-  margin-bottom: 2vw;
+  margin-bottom: 1vw;
   align-items: center;
   justify-content: center;
-  padding-bottom: 1.5vw;
   border: none;
   width: 7vw;
   height: 7vw;
 }
-
 .clicked {
   background-color: pink;
 }
-
 .heart-icon {
-  font-size: 4vw;
+  font-size: 3vw;
 }
+
+/* ------------------ MEDIA QUERIES------------------ */
+@media screen and (min-width: 768px) {
+  h2 {
+    font-size: 19px;
+  }
+  p, textarea, .submit-message{
+    font-size: 16px;
+  }
+  .card {
+    max-width: 700px;
+  }
+  .form-button {
+    font-size: 16px;
+    padding: 1vw;
+  }
+  .heart-icon {
+    font-size: 2vw;
+  }
+  .likes-button {
+    width: 4.5vw;
+    height: 4.5vw;
+  }
+}
+
+  @media screen and (min-width: 1024px) {
+  
+  .card {
+    max-width: 800px;
+    margin-bottom: 2vw;
+  }
+  .heart-icon {
+    font-size: 1.5vw;
+  }
+  .likes-button {
+    width: 4vw;
+    height: 4vw;
+  }
+}
+
+
+
+
 
