--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,7 +24,7 @@ button {
 /*------Happy Thoughts------*/
 
 .main-container {
-  background-color: white;
+  background-color: #e3e2e2;
   border: 1px solid #000;
   padding: 1em;
   max-width: 600px;
@@ -38,7 +38,8 @@ button {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
-  padding: 1em;
+  padding: 0.5em;
+  align-items: center;
 }
 textarea {
   border: 1px solid black;
@@ -51,11 +52,10 @@ textarea {
 }
 .happy-button {
   background-color: lightpink;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 700;
   padding: 1em;
   border-radius: 1em;
-
   cursor: pointer;
 }
 .heart {
@@ -110,5 +110,20 @@ form {
   font-size: 12px;
 }
 p {
-  padding: 1em;
+  font-size: 12px;
+  padding: 0.5em;
+}
+@media screen and (min-width: 768px) {
+  p {
+    font-size: 16px;
+    padding: 1em;
+  }
+
+  .main-container {
+    display: flex;
+
+    justify-content: space-between;
+    padding: 0, 5em;
+    padding: 0.5em;
+  }
 }
