--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,6 +3,9 @@ body {
   font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* display: flex;
+  justify-content: center; */
+  box-sizing: border-box;
 }
 
 code {
@@ -10,12 +13,15 @@ code {
 }
 
 main {
-  margin: 30px;
+  margin: 30px 0px;
+  display: flex;
+  justify-content: center;
 }
 
 .form-box {
   display: grid;
   row-gap: 30px;
+  width: 320px;
 }
 
 /* STYLING FOR SEND MESSAGES-BOX */
@@ -38,6 +44,7 @@ h1 {
 textarea {
   border: solid 2px lightgrey;
   border-radius: 5%;
+  resize: none;
 }
 
 .send-button {
@@ -66,6 +73,8 @@ textarea {
   padding: 10px 20px;
   display: flex;
   flex-direction: column;
+  overflow-wrap: break-word;
+  width: 300px;
 }
 
 h2 {
@@ -113,36 +122,17 @@ p {
   color: grey;
 }
 
-.thoughtsDetails {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.thoughtsLikes {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.numberOfLikes {
-  padding-left: 10px;
-}
-
-/* FOR TABLET */
+/* FOR TABLET
 
 @media screen and (min-width: 768px) {
   main {
-    margin: 30px 80px;
+    margin: 30px 100px;
   }
 }
-
-/* FOR LAPTOP */
 
 @media screen and (min-width: 1024px) {
   main {
-    margin: 30px 160px;
+    margin: 30px 300px;
   }
-}
+} */
 
