--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,9 +3,8 @@ body {
   font-family: 'Roboto Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* display: flex;
-  justify-content: center; */
   box-sizing: border-box;
+  background-color: palevioletred;
 }
 
 code {
@@ -75,6 +74,7 @@ textarea {
   flex-direction: column;
   overflow-wrap: break-word;
   width: 300px;
+  background-color: white;
 }
 
 h2 {
@@ -119,20 +119,8 @@ h2 {
 
 p {
   font-size: 12px;
-  color: grey;
+  color: rgb(113, 113, 113);
 }
 
-/* FOR TABLET
 
-@media screen and (min-width: 768px) {
-  main {
-    margin: 30px 100px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  main {
-    margin: 30px 300px;
-  }
-} */
 
