--- a/code/src/index.css
+++ b/code/src/index.css
@@ -69,7 +69,7 @@ form {
 .like-button {
   border: none;
   margin-top: 2px;
-  border-radius: 50px;
+  border-radius: 50%;
   background: #ECA6A6
 }
 
