--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,8 @@
 /* GENERAL STYLING FOR ENTIRE WEBPAGE */
-body {
+* {
   box-sizing: border-box;
+}
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -19,6 +21,7 @@ code {
 main {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 /* STYLING OF HEADER AND ITS CONTENT */
@@ -31,12 +34,17 @@ header {
 form {
   display: flex;
   flex-direction: column;
-  width: 80%;
-  margin: 10vw;
-  padding: 5vw;
+  width: 400px;
+  margin: 30px;
+  padding: 10px;
   background: #EEEEEE;
   border: 1px solid black;
   box-shadow: 5px 5px;
+}
+
+textarea {
+  margin-bottom: 5px;
+  min-height: 70px;
 }
 
 /* STYLING OF FEED AND ITS CONTENT */
@@ -44,15 +52,17 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 400px;
+  margin-bottom: 30px;
 }
 
 .thought-box {
-  width: 70%;
-  margin-bottom: 20vw;
-  padding: 10vw;
+  width: 100%;
+  padding: 10px;
   background: white;
   border: 1px solid black;
   box-shadow: 5px 5px;
+  word-wrap: break-word;
 }
 
 /* STYLING OF BUTTONS */
@@ -68,12 +78,18 @@ form {
 
 .like-button {
   border: none;
-  margin-top: 2px;
+  margin: 5px 5px 0 0;
+  padding: 2 8px;
   border-radius: 50%;
   background: #ECA6A6
 }
 
 /* STYLING OF SMALLER ELEMENTS AND FONTS */
+h1 {
+  font-size: 18px;
+  line-height: 1.8;
+}
+
 p, button, textarea {
   font-size: large;
 }
@@ -83,7 +99,7 @@ p, button, textarea {
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 667px) {
+/* @media (min-width: 667px) {
   form {
     width: 50%;
     margin: 5vw;
@@ -117,4 +133,4 @@ p, button, textarea {
   p, button, textarea {
     font-size: larger;
   }
-}
+} */
