--- a/code/src/index.css
+++ b/code/src/index.css
@@ -76,6 +76,13 @@ textarea {
   font-family: Monospace;
 }
 
+.like-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .like-button {
   border: none;
   margin: 5px 5px 0 0;
