--- a/happy-thoughts/src/index.css
+++ b/happy-thoughts/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500;700&display=swap');
 
 body {
   margin: 0;
@@ -48,8 +48,8 @@ li {
 }
 
 .cards {
-  margin-bottom: 35px;
-  padding: 10px 10px 20px;
+  margin-bottom: 30px;
+  padding: 15px;
   width: 250px;
   height: auto;
   -moz-box-shadow: 7px 8px 1px 0px black;
@@ -82,12 +82,8 @@ textarea {
   font-weight: 500;
   background-color: #fdaead;
   padding: 10px 0;
-  width: 200px;
+  width: 120px;
   border-radius: 25px;
-}
-
-.form span {
-  font-size: 17px;
 }
 
 .heart-button {
@@ -112,6 +108,10 @@ textarea {
   overflow-wrap: break-word;
 }
 
+.thought-messages {
+  margin-bottom: 25px;
+}
+
 .button-wrapper {
   display: flex;
   justify-content: space-between;
@@ -122,14 +122,12 @@ textarea {
 }
 
 .timestamp {
-  margin-right: 15px;
   color: #adadad;
 }
 
 .likes {
   margin-left: 10px;
   color: #adadad;
-  font-size: 14px;
   display: inline-flex;
 }
 
@@ -151,6 +149,10 @@ textarea {
   .cards {
     width: 300px;
   }
+
+  .form button {
+    width: 200px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -158,9 +160,13 @@ textarea {
     font-size: 34px;
   }
 
+  .form span {
+    font-size: 17px;
+  }
+
   .cards {
     border: 2px solid black;
-    width: 500px;
+    width: 475px;
   }
 
 }
