--- a/code/src/index.css
+++ b/code/src/index.css
@@ -351,7 +351,7 @@ footer {
     width: 550px;
   }
   .message {
-    overflow: initial;
+    overflow: visible;
   }
   .heart {
     font-size: 1.4rem;
