--- a/code/src/index.css
+++ b/code/src/index.css
@@ -104,10 +104,8 @@ textarea:focus {
 }
 
 .message {
-  min-height: 80px;
-  height: fit-content;
+  height: 100px;
   padding: 1rem 0;
-  overflow: scroll;
 }
 
 .like-and-date-wrapper {
