--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,129 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  margin: 20px;
+  font-family: 'Roboto mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(0.25turn, #CC95C0, #DBD4B4, #7AA1D2);
+  /* background: #D885A3; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400&display=swap');
+
+form {
+  max-width: 500px;
+  border: 2px solid black;
+  background: #F7F5F2;
+  box-shadow: 8px 8px;
+}
+
+textarea {
+  width: 400px;
+  height: 100px;
+  border: 2px solid #DFDFDE;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+h1 {
+  font-size: 16px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+h4 {
+  padding: 14px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+p {
+  font-size: 12px;
+  color: grey;
+  text-align: right;
+  margin-right: 20px;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.share-button {
+  width: 300px;
+  border-radius: 50px;
+  border: 2px solid #655D8A;
+  font-size: 16px;
+  padding: 14px;
+  background: #655D8A;
+  color: white;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: 'Roboto mono';
+  margin: 30px;
+  transition: 0.4s ease-in-out;
+}
+
+.share-button:hover { 
+  transform: scale(1.1);
+}
+
+.thought-cards {
+  max-width: 500px; 
+  border: 2px solid black;
+  background: #F7F5F2;
+  box-shadow: 8px 8px;
+  margin-top: 40px;
+  word-wrap: break-word;
+}
+
+.heart-button {
+  border: none;
+  background: lightgray;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: 12px;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+}
+
+.heart-button:hover {
+  transform: scale(1.2);
+}
+
+.heart-button-liked {
+  border: none;
+  background: #E3BEC6;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: 12px;
+  cursor: pointer;
+  transition: 0.4s ease-in-out;
+}
+
+.heart-button-liked:hover {
+  transform: scale(1.2);
+}
+
+.heart-emoji {
+  font-size: 20px;
+}
+
+.footer {
+  margin-top: 40px;
+  font-size: 14px;
+  color: #655D8A;
+}
+
+.letter-emoji {
+  font-size: 20px;
+}
+
+
