--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,12 +16,106 @@ code {
     monospace;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 95vw;
+}
+
 header {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   margin-top: 50px;
   margin-bottom: 20px;
   text-align: center;
-  max-width: 375px;
   color: black;
+  font-size: 16px;
+}
+
+.new-thought-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: solid black 2px;
+  width: 100%;
+  background-color: white;
+  margin-bottom: 10px;
+}
+
+.thought-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5px 10px 5px 10px;
+  width: 90%;
+  min-height: 50px;
+  margin: 0 auto;
+
+}
+
+.button-charachter-box {
+  padding: 10px 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.send-button {
+  background-color: lightgrey;
+  width: 150px;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 15px;
+  padding: 15px;
+  border-radius: 30px;
+}
+
+.send-button :disabled {
+  background-color: rgb(211, 211, 211, 0.8);
+
+}
+
+.send-button-text {
+  font-size: 12px;
+}
+
+.thought-container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border: solid black 2px;
+  background-color: white;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.thought-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icon {
+  font-size: 30px;
+}
+
+.btn {
+  border: none;
+}
+
+/*MEDIA QUERIES*/
+
+
+@media screen and (min-width: 767px) {
+  .container{
+      width: 50vw
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .container{
+      width: 30vw
+  }
 }
