--- a/code/src/index.css
+++ b/code/src/index.css
@@ -43,6 +43,10 @@ header {
   margin-bottom: 10px;
 }
 
+.new-thought-form {
+  padding-top: 10px;
+}
+
 .thought-input {
   display: flex;
   flex-direction: column;
@@ -50,7 +54,7 @@ header {
   padding: 5px 10px 5px 10px;
   width: 90%;
   min-height: 50px;
-  margin: 0 auto;
+  margin: 20px auto;
 
 }
 
@@ -64,7 +68,7 @@ header {
 
 .send-button {
   background-color: lightgrey;
-  width: 150px;
+  width: 200px;
   display: flex;
   justify-content: space-evenly;
   margin: 15px;
@@ -98,7 +102,11 @@ header {
 }
 
 .icon {
-  font-size: 30px;
+  font-size: 20px;
+  border-radius: 50%;
+  background-color: pink;
+  padding: 6px;
+  margin-right: 5px;
 }
 
 .btn {
@@ -109,13 +117,13 @@ header {
 
 
 @media screen and (min-width: 767px) {
-  .container{
-      width: 50vw
+  .container {
+    width: 50vw
   }
 }
 
 @media screen and (min-width: 1100px) {
-  .container{
-      width: 30vw
+  .container {
+    width: 30vw
   }
 }
