--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url(rosor.jpg);
-  font-family: 'Red Hat Mono', monospace;
+  font-family: "Red Hat Mono", monospace;
 }
 
 .date {
@@ -14,11 +14,11 @@ body {
 }
 
 .container {
-margin: 50px auto;
-width: 320px;
-display: flex;
-flex-direction: column;
-gap: 20px;
+  margin: 50px auto;
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .thoughts-card,
@@ -40,7 +40,7 @@ form {
 }
 
 .form-heading {
- font-size: 20px;
+  font-size: 20px;
 }
 
 .textarea {
@@ -52,6 +52,10 @@ form {
   margin-top: 5px;
   font-size: 10px;
   color: gray;
+}
+
+.thoughts-message {
+  overflow-wrap: break-word;
 }
 
 /* ----- THE BEATING BUTTON ----- */
@@ -118,5 +122,3 @@ form {
   font-size: 12px;
   color: gray;
 }
-
-
